# rust-cassandra-tables-from-rust-struct-macro

./: README.md
cassandra_macro/: .gitignore  Cargo.toml  README.md
cassandra_macro/src/: lib.rs
cassandra_macro_derive/: .gitignore  Cargo.toml  README.md
cassandra_macro_derive/src/: lib.rs
examples/test_cassandra_macro/: Cargo.toml
examples/test_cassandra_macro/src/: main.rs
