[package]
name = "cassandra_macro_derive"
version = "0.1.0"
authors = ["NunuM <nuno@nunum.me>"]
edition = "2018"
description = "Macros 1.1 implementation of #[derive(Cassandra)]"
homepage = "https://github.com/NunuM/rust-cassandra-tables-from-rust-struct-macro"
repository = "https://github.com/NunuM/rust-cassandra-tables-from-rust-struct-macro"
keywords = ["cassandra", "api", "migrations", "automation", "cql", "tables"]

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1"
