[package]
name = "test_cassandra_macro"
version = "0.1.1"
authors = ["nuno <nuno@nunum.me>"]
edition = "2018"

[dependencies]
uuid = { version = "0", features = ["serde", "v4"] }
chrono = { version = "0.4.6", features = ["serde"] }
serde_derive="1.0.106"
cdrs = { version = "2" }
cassandra_macro = { path = "../../cassandra_macro" }
cassandra_macro_derive = { path = "../../cassandra_macro_derive" }